--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 </div>
                                 <div class="col-xl-8 rounded p-3 add-margin" style="background-color: rgba(255, 255, 255, 0.5);">
                                     <h3 class="sub-section-title fw-bold">Introduction</h3>
-                                    <p class="fw-semibold fst-italic">Hi, I'm Mark Vincent, a passionate web developer with a keen interest in creating responsive and user-friendly web applications.</p>
+                                    <p class="fw-semibold fst-italic align-me">Hi, I'm Mark Vincent, a passionate web developer with a keen interest in creating responsive and user-friendly web applications.</p>
                                     <h3 class="sub-section-title fw-bold">Background</h3>
                                     <p class="fw-semibold fst-italic">I am a fresh graduate with a degree of Bachelor of Science in Computer Science from President Ramon Magsaysay State Unitversity (Main Campus).</p>
                                     <div class="row">
