--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                     <h3 class="sub-section-title fw-bold">Introduction</h3>
                                     <p class="fw-semibold fst-italic align-me">Hi, I'm Mark Vincent, a passionate web developer with a keen interest in creating responsive and user-friendly web applications.</p>
                                     <h3 class="sub-section-title fw-bold">Background</h3>
-                                    <p class="fw-semibold fst-italic">I am a fresh graduate with a degree of Bachelor of Science in Computer Science from President Ramon Magsaysay State Unitversity (Main Campus).</p>
+                                    <p class="fw-semibold fst-italic align-me">I am a fresh graduate with a degree of Bachelor of Science in Computer Science from President Ramon Magsaysay State Unitversity (Main Campus).</p>
                                     <div class="row">
                                         <div class="col-xl-4">
                                             <h3 class="sub-section-title fw-bold">Technical Skills</h3>
@@ -162,11 +162,11 @@
                                         </div>
                                         <div class="col-xl-8">
                                             <h3 class="sub-section-title fw-bold">Experience</h3>
-                                            <p class="fw-semibold">I have worked on various projects as a freelancer and have experience with both front-end and back-end development.</p>
+                                            <p class="fw-semibold  align-me">I have worked on various projects as a freelancer and have experience with both front-end and back-end development.</p>
                                             <h3 class="sub-section-title fw-bold">Passions and Interests</h3>
-                                            <p class="fw-semibold fst-italic">Outside of coding, I enjoy watching anime, playing games, and watching videos about programming.</p>
+                                            <p class="fw-semibold fst-italic  align-me">Outside of coding, I enjoy watching anime, playing games, and watching videos about programming.</p>
                                             <h3 class="sub-section-title fw-bold">Goals and Aspirations</h3>
-                                            <p class="fw-semibold fst-italic">My goal is to continue learning and growing as a developer, contributing to impactful projects, and making a positive difference in the tech community.</p>
+                                            <p class="fw-semibold fst-italic  align-me">My goal is to continue learning and growing as a developer, contributing to impactful projects, and making a positive difference in the tech community.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -180,6 +180,8 @@
                     <div class="container">
                         <div class="col-xl-4 col-md-3 ms-5" id="page-title-col">
                             <h1 class="text-dark fw-bold" id="page-title">Projects</h1>
+                        </div>
+                        <div class="row">
                         </div>
                     </div>
                 </div>
