--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <h1 class="text-dark fw-bold" id="page-title">Projects</h1>
                         </div>
                         <div class="row">
-                            <div class="col-lg-4 col-md-6">
+                            <div class="col-lg-4 col-md-6 mb-3">
                                 <div class="content-wrapper">
                                     <div class="card">
                                         <div class="card-header" style="background-color: #29435C;">
@@ -254,7 +254,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6">
+                            <div class="col-lg-4 col-md-6 mb-3">
                                 <div class="content-wrapper">
                                     <div class="card">
                                         <div class="card-header" style="background-color: #29435C;">
@@ -338,7 +338,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6">
+                            <div class="col-lg-4 col-md-6 mb-3">
                                 <div class="content-wrapper">
                                     <div class="card">
                                         <div class="card-header" style="background-color: #29435C;">
