Added new column, height adjusted

--- a/index.html
+++ b/index.html
@@ -418,6 +418,90 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-4 col-md-6 mb-3">
+                                <div class="content-wrapper">
+                                    <div class="card">
+                                        <div class="card-header" style="background-color: #29435C;">
+                                            <h4 class="fw-bold" style="color: #19A7CE;">Web Application</h4>
+                                            <h5 class="text-light"><span class="fw-semibold">Online Web Reservations and Delivery</span></h5>
+                                        </div>
+                                        <img class="img-fluid rounded-top rounded-bottom project-img" style="height: 260px;" src="carousel/GH1.PNG" alt="Project 1">
+                                        <div class="card-body" style="background-color: #29435C;">
+                                            <!-- Button trigger modal -->
+                                            <div class="d-flex justify-content-center">
+                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+                                                    View more
+                                                </button>
+                                            </div>
+                                            <!-- Modal -->
+                                                <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog modal-dialog-centered">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header" style="background-color: #29435C;">
+                                                                <div class="card-header m-0 p-0">
+                                                                    <h4 class="fw-bold" style="color: #19A7CE;">Web Application</h4>
+                                                                <br><h5 class="text-light"><span class="fw-semibold">Online Web Reservations and Delivery</span>| HTML, CSS, Bootstrap 5, PHP, and JavaScript.</h5>
+                                                                </div>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div id="carouselExampleFade4" class="carousel slide carousel-fade">
+                                                                    <div class="carousel-indicators">
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleFade4" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                                                                    </div>
+                                                                    <div class="carousel-inner">
+                                                                      <div class="carousel-item active">
+                                                                        <img src="carousel/GH1.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                      <div class="carousel-item">
+                                                                        <img src="carousel/GH2.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                      <div class="carousel-item">
+                                                                        <img src="carousel/GH3.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                      <div class="carousel-item">
+                                                                        <img src="carousel/GH4.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                      <div class="carousel-item">
+                                                                        <img src="carousel/GH5.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                      <div class="carousel-item">
+                                                                        <img src="carousel/GH6.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                      <div class="carousel-item">
+                                                                        <img src="carousel/GH7.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                      <div class="carousel-item">
+                                                                        <img src="carousel/GH8.PNG" class="d-block w-100" alt="Image">
+                                                                      </div>
+                                                                    </div>
+                                                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade4" data-bs-slide="prev">
+                                                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                                      <span class="visually-hidden">Previous</span>
+                                                                    </button>
+                                                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade4" data-bs-slide="next">
+                                                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                                      <span class="visually-hidden">Next</span>
+                                                                    </button>
+                                                                  </div>
+                                                            </div>
+                                                            <div class="modal-footer d-flex justify-content-center">
+                                                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            <!-- Modal end -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
